Update notebooks and project configuration
- Added new markdown content to the assignment notebook to guide students on data sourcing and application of learned concepts.
- Updated the .gitignore file to exclude .sketch files.
- Enhanced requirements.txt by adding 'prophet' and 'ipywidgets' libraries.
- Made various adjustments to Jupyter notebooks, including fixing execution counts and updating paths for data files.
- Deleted several unused notebooks related to modeling and validation to streamline the project structure.

--- a/notebooks/1_Foundation/4_Assignment/Code.ipynb
+++ b/notebooks/1_Foundation/4_Assignment/Code.ipynb
@@ -19,6 +19,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1423734",
+   "metadata": {},
+   "source": [
+    "Delete and annotate after reading. In this assignment, which is the first one, not only you will explain what they must do, but you will also mentally prepare them to grab data from other sources and apply what they learn on each lesson. I'll leave some examples in another folder that compares the points of different models on different datasets, as practical cases, and published on Medium."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "fa904135",
    "metadata": {
     "papermill": {
