Update environment configuration and clean up project files
- Updated PYTHONPATH in .env file for consistency across environments.
- Enhanced .gitignore to include additional notebook exclusions for better project organization.
- Deleted multiple unused Jupyter notebooks to streamline the project structure, including those related to validation and modeling.
- Adjusted font size in .vscode settings for improved readability.

--- a/notebooks/2_Modelling/6_Assignment/0_TEMPLATE.ipynb
+++ b/notebooks/2_Modelling/6_Assignment/0_TEMPLATE.ipynb
@@ -5,7 +5,7 @@
    "id": "de798339",
    "metadata": {},
    "source": [
-    "# Steps to choose best model between SARIMAX and ARIMA"
+    "# Steps to choose best model between ARIMA and SARIMA"
    ]
   },
   {
